--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@
     margin-top: 160px;
   }
   .C{
-    background-image: url(../img/back.jpg);
+    background-image: url(https://github.com/swjsk1222/swjsk.github.io/blob/master/back.jpg?raw=true);
     background-color: rgba(255, 255, 255, 0.795);
     background-blend-mode: lighten;
     background-attachment: scroll;
