--- a/style.css
+++ b/style.css
@@ -1,183 +1,324 @@
-@media screen and (min-width:0px) {
-  body{
-    margin: 0;
-    /* display: flex; */
-    background-color: rgb(255, 255, 255);
-  }
-  main{
-    padding-top: 0px;
-    width: 100vw;
-    width: 100%;
-  }
-  aside{
-    width: 30%;
-    min-width: 350px;
-    height: 100%;
-    border-top-right-radius: 30px;
-  }
-  nav ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    margin-top: 20px;
-  }
-  nav ul li{
-    font-size: 20px;
-    font-weight: 600;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    color: white;
-  }
-  nav a{
-    color: rgb(243, 243, 243);
-  }
-  .No0{
-    width: 80%;
-    margin-left: 0;
-  }
-  .open,.close{
-    display: none;
-    display: block;
-  }
-  .No4{
-    margin-left: 10px;
-    margin-top: 5px;
-  }
-  .open{
-    position: absolute;
-  }
-  .close{
-    font-size: 30px;
-    color: white;
-  }
-  input[type="checkbox"]{
-    position: absolute;
-    left: -50vw;
-  }
-  .open svg{
-    padding-top: 4px;
-    padding-left: 6px;
-    border-radius: 50px;
-    background-color: rgb(255, 255, 255);
-  }
-  aside{
-    position: absolute;
-    top: 0;
-    left: -450px;
-    transition: all 0.4s;
-    background: rgba(0, 0, 0, 0.692); 
-    height: 100vh;
-  }
-  input[type="checkbox"]:checked ~ aside{
-    left: 0;
-  }
-  input[type="checkbox"]:checked ~.back{
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   background: rgba(0,0,0,0.8) ;
-   z-index: 3;
-  }
-  header{
-    width: 100%;
-    height: 50px;
-    background-color: rgb(0, 0, 0) ;
-    display: flex;
-    position: absolute; 
-    top: 0px;
-    position: fixed;
-    z-index: 10;
-  }
-  /* メニュー終了 */
-  h1{
-    margin: 0;
-    margin-left: 50px;
-    margin-top: 10px;
-    color: white;
-    font-family: fantasy;
-    font-size: 25px;
-    position: relative ;
-  }
-  .A{
-    margin: 20px;
-  }
-  .A1{
-    width: 410px;
-    margin:2em 0;
-    position: relative;
-    margin-top: 150px;
-    margin-bottom: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0.5em 1.5em;
-    border-top: solid 1px black;
-    border-bottom: solid 1px black;
-  }
+body{
+  margin: 0;
+  /* display: flex; */
+  background-color: rgb(255, 255, 255);
+}
+main{
+  padding-top: 0px;
+  width: 100vw;
+  width: 100%;
+}
+aside{
+  width: 30%;
+  min-width: 350px;
+  height: 100%;
+  border-top-right-radius: 30px;
+}
+nav ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 50px;
+}
+nav ul li{
+  font-size: 25px;
+  font-weight: 600;
+  margin-left: 20px;
+  margin-bottom: 40px;
+  color: white;
+}
+nav a{
+  color: rgb(243, 243, 243);
+  display: block;
+  text-align: start;
+  text-decoration: none;
+}
+span{
+  margin-left: 50px;
+  font-size: 17px;
+}
+.No0{
+  width: 80%;
+  margin-left: 0;
+}
+.open,.close{
+  display: none;
+  display: block;
+}
+.No7{
+  margin-left: 10px;
+  margin-top: 5px;
+}
+.open{
+  position: absolute;
+  top: 14px;
+  left: 17px;
+}
+.close{
+  font-size: 30px;
+  color: white;
+}
+input[type="checkbox"]{
+  position: absolute;
+  left: -50vw;
+}
+.open svg{
+  padding-top: 4px;
+  padding-left: 6px;
+  border-radius: 50px;
+  background-color: rgb(255, 255, 255);
+}
+aside{
+  position: absolute;
+  top: 0;
+  left: -450px;
+  transition: all 0.4s;
+  background: rgba(0, 0, 0, 0.856); 
+  height: 100vh;
+  z-index: 11;
+}
+input[type="checkbox"]:checked ~ aside{
+  left: 0;
+}
+input[type="checkbox"]:checked ~.back{
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ background: rgba(0,0,0,0.8) ;
+ z-index: 3;
+}
+header{
+  width: 100%;
+  height: 65px;
+  background-color: rgb(0, 0, 0) ;
+  display: flex;
+  position: absolute; 
+  top: 0px;
+  position: fixed;
+  z-index: 10;
+}
+/* メニュー終了 */
+h1{
+  margin: 0;
+  margin-left: 50px;
+  margin-top: 10px;
+  color: white;
+  font-family: fantasy;
+  font-size: 30px;
+  position: relative ;
+  top: 6px;
+  left: 20px;
+}
+.A{
+  margin: 20px;
+}
+.A1{
+  width: 410px;
+  margin:2em 0;
+  position: relative;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5em 1.5em;
+  border-top: solid 1px black;
+  border-bottom: solid 1px black;
+}
 
-  .A1:before, .A1:after{
-    content: '';
-    position: absolute;
-    top: -10px;
-    width: 2px;
-    height: -webkit-calc(100% + 20px);
-    height: calc(100% + 20px);
-    background-color: black;
-  }
-  .A1:before {left: 10px;}
-  .A1:after {right: 10px;}
-  .A1 p {
-    margin: 0; 
-    padding: 0;
-  }
-  .A h2{
-    font-weight: 700;
-  }
-  .A2{
-    margin-top: 100px;
-  }
-  .G{
-    margin-top: 90px;
-  }
-  .B{
-    margin-top: 40px;
-    text-align: center;
-  }
-  .G1{
-    margin-top: 160px;
-  }
-  .C{
-    background-image: url(https://github.com/swjsk1222/swjsk.github.io/blob/master/back.jpg?raw=true);
-    background-color: rgba(255, 255, 255, 0.795);
-    background-blend-mode: lighten;
-    background-attachment: scroll;
-  }
-  .C1{
-    margin-top: 0px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  .C1 h2{
-    text-align: center;
-    margin-bottom: 80px;
-    margin-top: 30px;
-    padding-top: 30px;
-  }
-  .C1 h3{
-    font-weight: 520;
-    font-size: 20px;
-    border-left-color: rgb(59, 58, 58);
-    border-left-style: solid;
-    border-left-width: 4px;
-  }
-  .C1 p{
-    font-size: 15px;
-  }
-  .G2{
-    margin-top: 100px;
-  }
+.A1:before, .A1:after{
+  content: '';
+  position: absolute;
+  top: -10px;
+  width: 2px;
+  height: -webkit-calc(100% + 20px);
+  height: calc(100% + 20px);
+  background-color: black;
+}
+.A1:before {left: 10px;}
+.A1:after {right: 10px;}
+.A1 p {
+  margin: 0; 
+  padding: 0;
+}
+.A h2{
+  font-weight: 700;
+}
+.A2{
+  margin-top: 100px;
+}
+.G{
+  margin-top: 90px;
+}
+.B{
+  margin-top: 80px;
+  text-align: center;
+}
+.G1{
+  margin-top: 160px;
+}
+.C{
+  background-image: url(https://github.com/swjsk1222/swjsk.github.io/blob/master/back.jpg?raw=true);
+  background-color: rgba(255, 255, 255, 0.795);
+  background-blend-mode: lighten;
+  background-attachment: scroll;
+}
+.C1{
+  margin-top: 0px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.C1 h2{
+  text-align: center;
+  margin-bottom: 80px;
+  margin-top: 30px;
+  padding-top: 30px;
+}
+.C1 h3{
+  font-weight: 520;
+  font-size: 20px;
+  border-left-color: rgb(59, 58, 58);
+  border-left-style: solid;
+  border-left-width: 4px;
+}
+.C1 p{
+  font-size: 15px;
+}
+.G2{
+  margin-top: 100px;
+}
+.D{
+  margin-top: 80px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.D h2{
+  text-align: center;
+  margin-top: 40px;
+}
+.D1{
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  white-space: nowrap;
+  color: #CCCCCC;
+}
+.D1::before,.D1::after{
+  content: '★★★★★';
+}
+.D1[data-rate="4"]:after{width: 80%;}
+.D1:after{
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  color: #ffcf32;
+}
+.D2{
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  white-space: nowrap;
+  color: #CCCCCC;
+}
+.D2::before,.D2::after{
+  content: '★★★★★';
+}
+.D2[data-rate="2"]:after{width: 40%;}
+.D2:after{
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  color: #ffcf32;
+}
+.D3{
+  display: flex;
+}
+.D5{
+  margin-left: 20px;
+  line-height: 10px;
+}
+.D6{
+  display: flex;
+  margin-top: 30px;
+}
+.D8{
+  margin-left: 20px;
+  line-height: 10px;
+}
+.G3{
+  margin-top: 100px;
+}
+.E {
+  text-align: center;
+  margin-top: 80px;
+}
+.E img{
+  border-radius: 10px;
+  border-color: rgba(202, 200, 200, 0.87);
+}
+.G4{
+  margin-top: 40px;
+}
+.F{
+  text-align: center;
+  line-height: 40px;
+}
+.F h2{
+  margin-top: 100px;
+}
+
+.name{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 50px;
+}
+.name input{
+  width: 80%;
+  height: 30px;
+}
+.mail{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 50px;
+}
+.mail input{
+  width: 80%;
+  height: 30px;
+}
+.comment{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 50px;
+}
+.comment textarea{
+  width: 80%;
+  height: 80px;
+}
+.submit{
+  background-color: white;
+  margin: 0px;
+  width: 80px;
+  height: 30px;
+  font-size: 15px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+@media screen and (min-width:0px) {
+
+}
+@media screen and (min-width:800px) {
+
   .D{
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .D10{
+    display: flex;
   }
   .D h2{
     text-align: center;
@@ -185,7 +326,7 @@
   }
   .D1{
     position: relative;
-    z-index: 0;
+    z-index: 1;
     display: inline-block;
     white-space: nowrap;
     color: #CCCCCC;
@@ -196,7 +337,7 @@
   .D1[data-rate="4"]:after{width: 80%;}
   .D1:after{
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -205,7 +346,7 @@
   }
   .D2{
     position: relative;
-    z-index: 0;
+    z-index: 1;
     display: inline-block;
     white-space: nowrap;
     color: #CCCCCC;
@@ -216,7 +357,7 @@
   .D2[data-rate="2"]:after{width: 40%;}
   .D2:after{
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -230,22 +371,49 @@
     margin-left: 20px;
     line-height: 10px;
   }
+  .D9{
+    margin-bottom: 0;
+    white-space: pre;
+  }
   .D6{
     display: flex;
-    margin-top: 30px;
+    margin-top: 0;
+    margin-left: 150px;
   }
   .D8{
     margin-left: 20px;
     line-height: 10px;
   }
-  .G3{
-    margin-top: 100px;
-  }
-  .E {
-    text-align: center;
-  }
-  .E img{
-    border-radius: 10px;
-    border-color: rgba(202, 200, 200, 0.87);
-  }
 }
+@media screen and (min-width:1000px) {
+  .open{
+    display: none;
+  }
+  .close{
+    display: none; 
+  }
+  .checkbox{
+    display: none;
+    position: absolute;
+  }
+  aside{
+    position: absolute;
+    left: 0;
+    background-color: white;
+    z-index: 0!important;
+    transition: none;
+  }
+  a{
+    font-size: 20px;
+  }
+  li span{
+    display: none;
+  }
+  .No0{
+    display: none;
+  }
+  main{
+    background-color: ;
+    
+  }
+} 
