--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ main{
 aside{
   width: 30%;
   min-width: 350px;
-  height: 100%;
   border-top-right-radius: 30px;
 }
 nav ul{
@@ -76,9 +75,9 @@ aside{
   top: 0;
   left: -450px;
   transition: all 0.4s;
-  background: rgba(0, 0, 0, 0.856); 
-  height: 100vh;
+  background: rgba(0, 0, 0, 0.856)!important; 
   z-index: 11;
+  height: 100vh;
 }
 input[type="checkbox"]:checked ~ aside{
   left: 0;
@@ -113,10 +112,13 @@ h1{
   left: 20px;
 }
 .A{
-  margin: 20px;
+  width: 90%;
+  margin-right: 30px;
+  margin-left: 30px;
+  text-align: center;
 }
 .A1{
-  width: 410px;
+  width: 390px;
   margin:2em 0;
   position: relative;
   margin-top: 150px;
@@ -153,6 +155,7 @@ h1{
   margin-top: 90px;
 }
 .B{
+  width: 100%;
   margin-top: 80px;
   text-align: center;
 }
@@ -259,6 +262,8 @@ h1{
 .E {
   text-align: center;
   margin-top: 80px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .E img{
   border-radius: 10px;
@@ -311,7 +316,7 @@ h1{
   margin-top: 50px;
   margin-bottom: 50px;
 }
-@media screen and (min-width:0px) {
+@media screen and (min-width:481px) {
 
 }
 @media screen and (min-width:800px) {
@@ -430,3 +435,4 @@ h1{
     display: none;
   }
 } 
+
