--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ main{
   padding-top: 0px;
   width: 100vw;
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
 aside{
   width: 30%;
@@ -115,7 +117,7 @@ h1{
   width: 90%;
   margin-right: 30px;
   margin-left: 30px;
-  text-align: center;
+  transform: scale(0.8, 1);
 }
 .A1{
   width: 390px;
