--- a/style.css
+++ b/style.css
@@ -114,19 +114,17 @@ h1{
   left: 20px;
 }
 .A{
-  width: 90%;
   margin-right: 30px;
   margin-left: 30px;
   transform: scale(0.8, 1);
 }
 .A1{
-  width: 390px;
+  width: 60%;
   margin:2em 0;
+  margin: 0 auto;
   position: relative;
   margin-top: 150px;
   margin-bottom: 150px;
-  margin-left: auto;
-  margin-right: auto;
   padding: 0.5em 1.5em;
   border-top: solid 1px black;
   border-bottom: solid 1px black;
@@ -264,8 +262,8 @@ h1{
 .E {
   text-align: center;
   margin-top: 80px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .E img{
   border-radius: 10px;
@@ -437,4 +435,5 @@ h1{
     display: none;
   }
 } 
+
 
